--- a/src/app/components/shared/header/header.html
+++ b/src/app/components/shared/header/header.html
@@ -1,13 +1,8 @@
 <mat-toolbar>
-  <button matIconButton class="example-icon" aria-label="Example icon-button with menu icon">
-    <mat-icon>menu</mat-icon>
-  </button>
   <span>My App</span>
   <span class="flex flex-auto"></span>
-  <button matIconButton class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>favorite</mat-icon>
-  </button>
-  <button matIconButton class="example-icon" aria-label="Example icon-button with share icon">
-    <mat-icon>share</mat-icon>
-  </button>
+  <div class="flex">
+    <button (click)="login()" *ngIf= "!isUserLogedIn" matButton="filled">Login</button>
+    <button (click)="logout()" *ngIf="isUserLogedIn" matButton="filled">Logout</button>
+  </div>
 </mat-toolbar>
