--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,2 +1,9 @@
 <app-header />
+
+<ul>
+    <li><a routerLink="/public-page">public page</a></li>
+    <li><a routerLink="/restricted-page">restricted page</a></li>
+</ul>
+
+<hr>
 <router-outlet />
